--- a/packages/block-library/src/form-input/style.scss
+++ b/packages/block-library/src/form-input/style.scss
@@ -61,3 +61,9 @@
 textarea.wp-block-form-input__input {
 	min-height: 10em;
 }
+
+input[type="email"],
+input[type="url"] {
+	/*rtl:ignore*/
+	direction: ltr;
+}
